Bug 398394 - Account information report crashes
Summary: Account information report crashes
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 395826 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-09-08 15:13 UTC by Thomas Baumgart
Modified: 2018-09-08 16:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2018-09-08 15:13:32 UTC
Running the account information report crashes with unknown institution. This is caused by an account that is not referencing an institution.
Comment 1 Thomas Baumgart 2018-09-08 16:41:47 UTC
Git commit f485c8f6327b5303cc64186b46c52e9db3481078 by Thomas Baumgart.
Committed on 08/09/2018 at 16:40.
Pushed by tbaumgart into branch '5.0'.

Fix information reports

All information reports were completely broken. This change brings back
their functionality.
FIXED-IN: 5.0.2

M  +3    -1    kmymoney/plugins/views/reports/core/listtable.cpp
M  +2    -0    kmymoney/plugins/views/reports/core/listtable.h
M  +21   -12   kmymoney/plugins/views/reports/core/objectinfotable.cpp
M  +2    -0    kmymoney/plugins/views/reports/core/objectinfotable.h
M  +1    -0    kmymoney/plugins/views/reports/core/querytable.h

https://commits.kde.org/kmymoney/f485c8f6327b5303cc64186b46c52e9db3481078
Comment 2 Thomas Baumgart 2018-09-08 16:56:16 UTC
*** Bug 395826 has been marked as a duplicate of this bug. ***