Fix information reports

All information reports were completely broken. This change brings back
their functionality.

BUG: 398394
FIXED-IN: 5.0.2